# scraper_telegram_bot

scraper_telegram_bot/: .gitignore  README.md  pyproject.toml
scraper_telegram_bot/src/scraper_telegram_bot/: __init__.py  config_sample.py  main.py  urls.py  utils.py
scraper_telegram_bot/src/scraper_telegram_bot/scrapers/: gunday.py  netgun.py  optyka.py
